# fastapi-langgraph-ai-agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  api-requests.http  docker-compose.yml  pyproject.toml
app/: guardrails.py  logger.py  main.py  models.py
app/agent/: graph.py  nodes.py  skills.py  state.py  tools.py
app/config/: di.py
app/llm/: client.py  guard.py  guardrail.py  prompts.py  response_generator.py  skill_router.py  types.py
app/order/: repository.py  service.py
app/product/: catalog.py  repository.py  service.py
data/: products.json
embedding/: index.py  inspect.py
evaluation/: skill_router_eval.py
tests/: test_main.py  test_order.py  test_product.py
