[project]
name = "mini-agent"
version = "0.1.0"
description = "Mini AI agent — FastAPI + LangGraph + Pydantic"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "langgraph>=0.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.28.0",
]
