[project]
name = "ecommerce-ai-agent"
version = "0.2.0"
description = "E-commerce AI Agent — FastAPI + LangGraph + DeepSeek LLM"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "langgraph>=0.3.0",
    "langgraph-checkpoint-sqlite>=2.0.0",
    "langchain-openai>=1.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.28.0",
    "anyio>=4.0",
    "ruff>=0.11.0",
]

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.ruff.lint.per-file-ignores]
"app/llm/prompts.py" = ["E501"]   # LLM prompts — breaking lines alters prompt text

[tool.ruff.format]
quote-style = "double"
